--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "neo4j-driver": "^5.11.0",
     "next": "13.4.10",
     "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.26",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-select": "^5.7.4",
     "react-select-search": "^4.1.6",
+    "styled-components": "^6.0.7",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
