--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "neo4j": "^2.0.0-RC2",
     "neo4j-driver": "^5.11.0",
     "next": "13.4.10",
     "next-mdx-remote": "^4.4.1",
